--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableStructure.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableStructure.mxml
@@ -379,7 +379,7 @@
 			<s:HGroup width="100%" height="100%" horizontalAlign="left" verticalAlign="middle" paddingLeft="10">
 			
 				<button:WorkAreaButton id="commit" label="{ resourceManager.getString( 'DataBase_General', 'data_table_structure_commit' ) }" 
-									   icon="@Embed('assets/commit.png')" click="applyBtnClickHandler()" />
+									   icon="{ VDOMImage.Commit }" click="applyBtnClickHandler()" />
 			
 				<button:WorkAreaButton id="addNew" label="{ resourceManager.getString( 'DataBase_General', 'data_table_structure_add' ) }" 
 									   icon="{ VDOMImage.Add }" click="addBtnHandler()" />
