--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ColorPickerWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ColorPickerWindowSkin.mxml
@@ -4,7 +4,7 @@
 		xmlns:mx="library://ns.adobe.com/flex/mx"
 		xmlns:colorPicker="net.vdombox.ide.modules.wysiwyg.view.components.colorPicker.*" 
 		xmlns:attributeRenderers="net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.*"
-		width="460" height="360" xmlns:components="net.vdombox.components.*" xmlns:button="net.vdombox.ide.common.view.components.button.*">
+		width="460" height="380" xmlns:components="net.vdombox.components.*" xmlns:button="net.vdombox.ide.common.view.components.button.*">
 	<!-- host component -->
 	<fx:Metadata>
 		[HostComponent("net.vdombox.ide.modules.wysiwyg.view.components.windows.ColorPickerWindow")]
@@ -26,6 +26,8 @@
 		<s:State name="normalWithControlBar" />
 		<s:State name="disabled" />
 		<s:State name="normal" />
+		<s:State name="normalAndInactive"/>
+		<s:State name="disabledAndInactive"/>
 	</s:states>
 	
 	<!-- SkinParts
@@ -41,30 +43,37 @@
 		</s:fill>
 	</s:Rect>
 	<s:VGroup left="9" right="9" top="9" bottom="9" gap="0">	
+		
+		<s:Group width="100%" height="42">
+			<s:TitleBar id="titleBar"
+						minHeight="32" width="100%"
+						skinClass="net.vdombox.ide.common.view.skins.PopupWindowTitleBarSkin"/>
+		</s:Group>	
+		
 		<s:Group width="100%" height="100%">
 			<s:Rect>
 				<s:fill>
-					<s:SolidColor color="#353535"/>
+					<s:SolidColor color="#2f2f2f"/>
 				</s:fill>
 			</s:Rect>
 			<s:HGroup  paddingBottom="0" paddingLeft="0" paddingRight="4" paddingTop="0">
 				
 				<s:HGroup height="272" gap="0" paddingBottom="0" paddingLeft="0" paddingRight="0" paddingTop="0">
 					
-					<mx:Canvas height="272" horizontalScrollPolicy="off" verticalScrollPolicy="off" width="272">
+					<s:BorderContainer height="272" width="272">
 						
-						<mx:Canvas height="258" width="258" x="7" y="7"
+						<s:BorderContainer height="258" width="258" x="7" y="7"
 								   backgroundColor="#000000">
 							
 							<attributeRenderers:ColorPickerCanvas id="ccc"
 																  height="256" maxHeight="256" maxWidth="256" minHeight="256"
 																  minWidth="256" width="256" x="1" y="1"
 																  mouseDown="{hostComponent.on_ccc_mouse_down(event);}"/>
-						</mx:Canvas>
+						</s:BorderContainer>
 						
-						<mx:SWFLoader id="ccm"
+						<s:SWFLoader id="ccm"
 									  source="{hostComponent.cc_marker}" x="0" y="0" />
-					</mx:Canvas>
+					</s:BorderContainer>
 					
 					<mx:Canvas height="272" horizontalScrollPolicy="off" verticalScrollPolicy="off" width="36"
 							   mouseDown="hostComponent.on_ccb_mouse_down(event);">
@@ -78,11 +87,11 @@
 																  mouseDown="hostComponent.on_ccb_mouse_down(event);" />
 						</mx:Canvas>
 						
-						<mx:SWFLoader id="ccrm"
+						<s:SWFLoader id="ccrm"
 									  height="9" source="{hostComponent.cc_r_marker}" width="5" x="0" y="0"
 									  scaleContent="false" />
 						
-						<mx:SWFLoader id="cclm"
+						<s:SWFLoader id="cclm"
 									  height="9" source="{hostComponent.cc_l_marker}" width="5" x="0" y="0"
 									  scaleContent="false" />
 					</mx:Canvas>
@@ -90,135 +99,158 @@
 				
 				<s:VGroup height="100%"
 						  paddingBottom="8" paddingTop="8">
-					
-					<s:HGroup>
+					<s:HGroup styleName="bbbox" width="100%" height="24"
+							  gap="0" paddingRight="10" >
 						
-						<s:RadioButton id="rb_H" label="H" skinClass="spark.skins.spark.RadioButtonSkin"
-									   click="hostComponent.on_rb_hsb_change()" 
-										click.inactiveWithControlBar="hostComponent.on_rb_hsb_change()"/>
+						<s:Group height="100%" width="100%">
+							<mx:Box height="100%" width="100%"
+									backgroundColor="{hostComponent._color}" />
+							
+							<s:Rect width="100%" height="100%"
+									visible="{hostComponent.colorValue == ''}">
+								<s:fill>
+									<s:BitmapFill source="@Embed('assets/empty.png')" fillMode="repeat" />
+								</s:fill>
+							</s:Rect>
+						</s:Group>
 						
-						<mx:NumericStepper id="tx_H"
-										   maxChars="3" maximum="359" minimum="0" stepSize="1" value="{hostComponent.hsb.h}"
-										   change="hostComponent.on_tx_hsb_change()" />
+						<s:Group height="100%" width="100%">
+							<mx:Box height="100%" width="100%"
+									backgroundColor="{hostComponent.old_color}"
+									click="hostComponent.on_restore_color()"/>
+							
+							<s:Rect width="100%" height="100%"
+									visible="{hostComponent.oldColorValue == ''}">
+								<s:fill>
+									<s:BitmapFill source="@Embed('assets/empty.png')" fillMode="repeat" />
+								</s:fill>
+							</s:Rect>
+						</s:Group>	
 						
-						<s:Label text="°" />
 					</s:HGroup>
 					
-					<s:HGroup>
+					<s:VGroup id="HSBGroup" width="100%" height="100%" gap="0">
 						
-						<s:RadioButton id="rb_S"
-										label="S" skinClass="spark.skins.spark.RadioButtonSkin"
-										click="hostComponent.on_rb_hsb_change()" />
+						<s:HGroup>
+							
+							<s:RadioButton id="rb_H" color="0xFFFFFF" label="H" skinClass="spark.skins.spark.RadioButtonSkin"
+										   click="hostComponent.on_rb_hsb_change()" 
+											click.inactiveWithControlBar="hostComponent.on_rb_hsb_change()"/>
+							
+							<s:NumericStepper id="tx_H"
+											   maxChars="3" maximum="359" minimum="0" stepSize="1" value="{hostComponent.hsb.h}"
+											   change="hostComponent.on_tx_hsb_change()" 
+											   skinClass="spark.skins.spark.NumericStepperSkin"/>
+							
+							<s:Label text="°" />
+						</s:HGroup>
 						
-						<mx:NumericStepper id="tx_S"
-										   maxChars="3" maximum="100" minimum="0" stepSize="1" value="{hostComponent.hsb.s}"
-										   change="hostComponent.on_tx_hsb_change()" />
+						<s:HGroup>
+							
+							<s:RadioButton id="rb_S" color="0xFFFFFF"
+											label="S" skinClass="spark.skins.spark.RadioButtonSkin"
+											click="hostComponent.on_rb_hsb_change()" />
+							
+							<s:NumericStepper id="tx_S"
+											   maxChars="3" maximum="100" minimum="0" stepSize="1" value="{hostComponent.hsb.s}"
+											   change="hostComponent.on_tx_hsb_change()" 
+											   skinClass="spark.skins.spark.NumericStepperSkin"/>
+							
+							<s:Label text="%" />
+						</s:HGroup>
 						
-						<s:Label text="%" />
-					</s:HGroup>
+						<s:HGroup>
+							
+							<s:RadioButton id="rb_B" color="0xFFFFFF"
+											label="B" skinClass="spark.skins.spark.RadioButtonSkin"
+											click="hostComponent.on_rb_hsb_change()" />
+							
+							<s:NumericStepper id="tx_B"
+											   maxChars="3" maximum="100" minimum="0" stepSize="1" value="{hostComponent.hsb.b}"
+											   change="hostComponent.on_tx_hsb_change()" 
+											   skinClass="spark.skins.spark.NumericStepperSkin"/>
+							
+							<s:Label text="%" />
+						</s:HGroup>
 					
-					<s:HGroup>
+					</s:VGroup>
 						
-						<s:RadioButton id="rb_B"
-										label="B" skinClass="spark.skins.spark.RadioButtonSkin"
-										click="hostComponent.on_rb_hsb_change()" />
-						
-						<mx:NumericStepper id="tx_B"
-										   maxChars="3" maximum="100" minimum="0" stepSize="1" value="{hostComponent.hsb.b}"
-										   change="hostComponent.on_tx_hsb_change()" />
-						
-						<s:Label text="%" />
-					</s:HGroup>
-					
 					<mx:Spacer height="4" />
 					
-					<s:HGroup>
-						
-						<s:RadioButton id="rb_r"
-										label="R" skinClass="spark.skins.spark.RadioButtonSkin"
-										click="hostComponent.on_rb_rgb_change()" />
-						
-						<mx:NumericStepper id="tx_r"
-										   maxChars="3" maximum="255" minimum="0" stepSize="1"
-										   value="{(hostComponent._color >> 16) &amp; 0xFF}"
-										   change="hostComponent.on_tx_rgb_change()" dataChange="hostComponent.on_tx_rgb_change()" />
-					</s:HGroup>
+					<s:VGroup id="RGBGroup" width="100%" height="100%" gap="0">
 					
-					<s:HGroup>
+						<s:HGroup>
+							
+							<s:RadioButton id="rb_r" color="0xFFFFFF"
+											label="R" skinClass="spark.skins.spark.RadioButtonSkin"
+											click="hostComponent.on_rb_rgb_change()" />
+							
+							<s:NumericStepper id="tx_r"
+											   maxChars="3" maximum="255" minimum="0" stepSize="1"
+											   value="{(hostComponent._color >> 16) &amp; 0xFF}"
+											   change="hostComponent.on_tx_rgb_change()"
+											   skinClass="spark.skins.spark.NumericStepperSkin"/>
+						</s:HGroup>
 						
-						<s:RadioButton id="rb_g"
-										label="G" skinClass="spark.skins.spark.RadioButtonSkin"
-										click="hostComponent.on_rb_rgb_change()" />
+						<s:HGroup>
+							
+							<s:RadioButton id="rb_g" color="0xFFFFFF"
+											label="G" skinClass="spark.skins.spark.RadioButtonSkin"
+											click="hostComponent.on_rb_rgb_change()" />
+							
+							<s:NumericStepper id="tx_g"
+											   maxChars="3" maximum="255" minimum="0" stepSize="1"
+											   value="{(hostComponent._color >> 8) &amp; 0xFF}"
+											   change="hostComponent.on_tx_rgb_change()" 
+											   skinClass="spark.skins.spark.NumericStepperSkin"/>
+						</s:HGroup>
 						
-						<mx:NumericStepper id="tx_g"
-										   maxChars="3" maximum="255" minimum="0" stepSize="1"
-										   value="{(hostComponent._color >> 8) &amp; 0xFF}"
-										   change="hostComponent.on_tx_rgb_change()" dataChange="hostComponent.on_tx_rgb_change()" />
-					</s:HGroup>
-					
-					<s:HGroup>
+						<s:HGroup>
+							
+							<s:RadioButton id="rb_b" color="0xFFFFFF"
+											label="B" skinClass="spark.skins.spark.RadioButtonSkin"
+											click="hostComponent.on_rb_rgb_change()" />
+							
+							<s:NumericStepper id="tx_b"
+											   maxChars="3" maximum="255" minimum="0" stepSize="1"
+											   value="{(hostComponent._color) &amp; 0xFF}"
+											   change="hostComponent.on_tx_rgb_change()"
+											   skinClass="spark.skins.spark.NumericStepperSkin"/>
+						</s:HGroup>
 						
-						<s:RadioButton id="rb_b"
-										label="B" skinClass="spark.skins.spark.RadioButtonSkin"
-										click="hostComponent.on_rb_rgb_change()" />
+					</s:VGroup>
 						
-						<mx:NumericStepper id="tx_b"
-										   maxChars="3" maximum="255" minimum="0" stepSize="1"
-										   value="{(hostComponent._color) &amp; 0xFF}"
-										   change="hostComponent.on_tx_rgb_change()" dataChange="hostComponent.on_tx_rgb_change()" />
+					<s:HGroup width="100%" paddingRight="10"
+							  horizontalAlign="center"  gap="5" >
+						
+						<s:Label height="100%" 
+								 verticalAlign="middle"
+								 color="0xFFFFFF" text="#" />
+						
+						<s:TextInput id="hexrgb" change="hostComponent.on_tx_hex_change()" maxChars="6"
+									 restrict="a-fA-F0-9" text="" width="80"/>
 					</s:HGroup>
 				</s:VGroup>
 			</s:HGroup>
 		</s:Group>
 		
-		<mx:Spacer height="100%"/>
+		<mx:Spacer height="1"/>
 	
 		<s:Group width="100%" height="100%">
+			
 			<s:Rect width="100%" height="100%">
 				<s:fill>
-					<s:BitmapFill source="{VDOMImage.Fon_Texture}" smooth="true" fillMode="repeat"/>
+					<s:SolidColor color="0x3a3a3a"/>
 				</s:fill>
 			</s:Rect>
+			
+			<s:Line left="0" right="0" top="0">
+				<s:stroke>
+					<s:SolidColorStroke color="#555555" weight="1"/>
+				</s:stroke>
+			</s:Line>
 		
 			<mx:ControlBar horizontalAlign="right" width="100%" height="60">
-			
-				<s:HGroup styleName="bbbox"
-					 	 gap="1" paddingBottom="1" paddingLeft="10" paddingRight="10" paddingTop="1">
-				
-					<s:Group height="22" width="32">
-						<mx:Box height="100%" width="100%"
-								backgroundColor="{hostComponent._color}" />
-						
-						<s:Rect width="100%" height="100%"
-								visible="{hostComponent.colorValue == ''}">
-							<s:fill>
-								<s:BitmapFill source="@Embed('assets/empty.png')" fillMode="repeat" />
-							</s:fill>
-						</s:Rect>
-					</s:Group>
-					
-					<s:Group height="22" width="32">
-						<mx:Box height="22" width="32"
-								backgroundColor="{hostComponent.old_color}"
-								click="hostComponent.on_restore_color()"/>
-						
-						<s:Rect width="100%" height="100%"
-								visible="{hostComponent.oldColorValue == ''}">
-							<s:fill>
-								<s:BitmapFill source="@Embed('assets/empty.png')" fillMode="repeat" />
-							</s:fill>
-						</s:Rect>
-					</s:Group>	
-					
-				</s:HGroup>
-			
-				<s:HGroup gap="0">
-				
-					<s:Label text="#" />
-				
-					<s:TextInput id="hexrgb" change="hostComponent.on_tx_hex_change()" maxChars="6"
-							 	restrict="a-fA-F0-9" text="" width="80"/>
-				</s:HGroup>
 			
 				<mx:Spacer width="100%" />
 			
