--- a/IDE/v.02/common/src/net/vdombox/editors/VDOMToolTip.mxml
+++ b/IDE/v.02/common/src/net/vdombox/editors/VDOMToolTip.mxml
@@ -2,7 +2,7 @@
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 			xmlns:s="library://ns.adobe.com/flex/spark" 
 			xmlns:mx="library://ns.adobe.com/flex/mx"
-			minHeight="12" maxHeight="12">
+			minHeight="20" maxHeight="20">
 	
 	<fx:Script>
 		<![CDATA[
@@ -42,11 +42,14 @@
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations> 
 	
-	<s:Rect width="100%" height="100%">
+	<s:Rect width="100%" height="100%"
+			radiusX="3" radiusY="3">
 		<s:fill>
-			<s:SolidColor color="#FFFFe1"/>
+			<s:SolidColor color="#555555"/>
 		</s:fill>
 	</s:Rect>
 	
-	<mx:Label id="lblTitle"/>
+	<mx:Label id="lblTitle" width="100%" height="100%" top="0"
+			  paddingLeft="10" paddingRight="10"
+			  color="0xFFFFFF"/>
 </s:Group>
