bug fix (dialog function)
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8735 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/popup/Question.mxml
+++ b/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/popup/Question.mxml
@@ -57,7 +57,15 @@
 				
 				for each (var value : * in _dataProvider) 
 				{
-					answer = AnswerCreator.create( value);
+					try
+					{
+						answer = AnswerCreator.create( value);
+					}
+					catch (e:Error)
+					{
+						trace ("error");
+						continue;
+					}
 					answerBox.addChild( answer );
 				}
 			}
