git-svn-id: http://svn.vdombox.ru/flextools/trunk@8756 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/assets/style/style.css
+++ b/PowerPack/v.01/PowerPack/src/assets/style/style.css
@@ -480,7 +480,7 @@ SuperTextArea
 	fontWeight: bold;
 }
 
-CheckBox {
+.liscenseCheckBoxStyle {
 	color: #ffffff;
 	disabledColor:  #ffffff;
 	textRollOverColor: #ffffff;
