git-svn-id: http://svn.vdombox.ru/flextools/trunk@8757 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack_lib/src/assets/style/style.css
+++ b/PowerPack/v.01/PowerPack_lib/src/assets/style/style.css
@@ -422,7 +422,7 @@ ScrollBar {
 	thumbSkin : ClassReference("net.vdombox.powerpack.lib.player.customize.skins.ScrollThumbSkin")
 }
 
-CheckBox {
+.liscenseCheckBoxStyle {
 	color: #ffffff;
 	disabledColor:  #ffffff;
 	textRollOverColor: #ffffff;
