bug fix:  project modified
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8758 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/ProjectPropertiesBox.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/ProjectPropertiesBox.mxml
@@ -29,7 +29,8 @@
 			import net.vdombox.powerpack.sdkcompiler.SDKCompilerParamsChecker;
 			import net.vdombox.powerpack.template.BuilderTemplateProject;
 			
-			public static const EVENT_INITIAL_GRAPH_CHANGED : String = "initialGraphChanged";
+			public static const EVENT_INITIAL_GRAPH_CHANGED		: String = "initialGraphChanged";
+			public static const EVENT_PROJECT_SETTINGS_CHANGED	: String = "projectSettingsSaved";
 			
 			private var compilerParamsChecker	: SDKCompilerParamsChecker = SDKCompilerParamsChecker.getInstance();
 			
@@ -349,6 +350,8 @@
 				}
 				
 				project.key = txtKey.text;
+				
+				dispatchEvent(new Event(EVENT_PROJECT_SETTINGS_CHANGED));
 			}
 			
 			private var _initialGraphIndex : int;
