git-svn-id: http://svn.vdombox.ru/flextools/trunk@8761 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/Player.mxml
+++ b/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/Player.mxml
@@ -575,7 +575,7 @@
 				<mx:HBox y="162" width="100%"
 						 horizontalAlign="right" verticalAlign="middle">
 					<control:RoundButton id="btnRun"
-										 label="{LanguageManager.sentences.run}"
+										 label="{LanguageManager.sentences.next}"
 										 click="{processStep ( cLicense );}"/>
 				</mx:HBox>
 			</mx:Canvas>
