--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
@@ -311,10 +311,10 @@
 					cellIndex = 0;
 					for each ( var xmlCell:XML in xmlRow.cell ) 
 					{
-						if ( serverVersion && serverVersion >= "1.3.8535" )
-							tableRow[ dataGridColumns[ cellIndex ].dataField ] = StringUtils.fromHtmlEnc(  xmlCell.toString() );
-						else
-							tableRow[ dataGridColumns[ cellIndex ].dataField ] = StringUtils.toHtmlEnc( xmlCell.toString() );
+						//if ( serverVersion && serverVersion >= "1.3.8535" )
+						tableRow[ dataGridColumns[ cellIndex ].dataField ] = StringUtils.fromHtmlEnc(  xmlCell.toString() );
+						/*else
+							tableRow[ dataGridColumns[ cellIndex ].dataField ] = StringUtils.toHtmlEnc( xmlCell.toString() );*/
 						
 						cellIndex++;
 					}
