git-svn-id: http://svn.vdombox.ru/flextools/trunk@8779 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
@@ -251,10 +251,11 @@
 
 			private function renderer_moveHandler( event : RendererEvent ) : void
 			{
+				var object : Object = event.object;
+				
 				var ee : EditorEvent = new EditorEvent( EditorEvent.RENDERER_TRANSFORMED );
-
 				ee.renderer = event.target as IRenderer;
-				ee.attributes = { x: int( UIComponent( ee.renderer ).x ), y: int (UIComponent( ee.renderer ).y) };
+				ee.attributes = { x: object.x, y: object.y };
 
 				dispatchEvent( ee );
 			}
