--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
@@ -1,54 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:HGroup xmlns:components="net.vdombox.ide.modules.scripts.view.components.*"
+<s:Group xmlns:components="net.vdombox.ide.modules.scripts.view.components.*"
 		  xmlns:fx="http://ns.adobe.com/mxml/2009"
 		  xmlns:mx="library://ns.adobe.com/flex/halo"
 		  xmlns:s="library://ns.adobe.com/flex/spark"
-		  height="100%" width="100%" xmlns:mx1="library://ns.adobe.com/flex/mx" gap="0">
+		  height="100%" width="100%" xmlns:mx1="library://ns.adobe.com/flex/mx"
+		  >
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.modules.scripts.view.skins.PanelSkin;
 		]]>
 	</fx:Script>
+	<mx1:HDividedBox width="100%" height="100%" >
 	
-	<mx1:VDividedBox height="100%" width="228" minWidth="200" dividerSkin="net.vdombox.ide.common.view.skins.DividerSkin">
-		
-		<components:LibrariesPanel id="librariesPanel"
-								   width="100%" height="50%"
-								   skinClass="net.vdombox.ide.modules.scripts.view.skins.PanelSkin"
-								   title="{ resourceManager.getString( 'Scripts_General', 'libraries_panel_title' ) }"/>
-		
-	</mx1:VDividedBox>
-	
-	<s:Rect width="8" height="100%">
-		<s:fill>
-			<s:SolidColor color="#424242"/>
-		</s:fill>
-	</s:Rect>
-	
-	<components:ScriptArea id="scriptArea" width="1000%" height="100%"/>
-	
-	<s:Rect width="8" height="100%">
-		<s:fill>
-			<s:SolidColor color="#424242"/>
-		</s:fill>
-	</s:Rect>
-
-	<mx1:VDividedBox height="100%" width="228" minWidth="200" dividerSkin="net.vdombox.ide.common.view.skins.DividerSkin">
-
-		<components:ContainersPanel id="containersPanel"
-									width="100%" height="40%" 
-									skinClass="net.vdombox.ide.modules.scripts.view.skins.PanelSkin"
-									title="{ resourceManager.getString( 'Scripts_General', 'containers_panel_title' ) }"/>
-
-		<components:ServerScriptsPanel id="serverScriptsPanel"
-									   width="100%" height="40%"
+		<mx1:VDividedBox height="100%" width="228" minWidth="120" dividerSkin="net.vdombox.ide.common.view.skins.DividerSkin">
+			
+			<components:LibrariesPanel id="librariesPanel"
+									   width="100%" height="50%"
 									   skinClass="net.vdombox.ide.modules.scripts.view.skins.PanelSkin"
-									   title="{ resourceManager.getString( 'Scripts_General', 'server_scripts_panel_title' ) }"/>
-
-		<components:GlobalScriptsPanel id="globalScriptsPanel"
-								   width="100%" height="20%"
-								   skinClass="net.vdombox.ide.modules.scripts.view.skins.PanelSkin"
-								   title="{ resourceManager.getString( 'Scripts_General', 'global_scripts_panel_title' ) }"/>
+									   title="{ resourceManager.getString( 'Scripts_General', 'libraries_panel_title' ) }"/>
+			
+		</mx1:VDividedBox>
 		
-	</mx1:VDividedBox>
-</s:HGroup>
+		<components:ScriptArea id="scriptArea" width="1000%" height="100%"/>
+	
+		<mx1:VDividedBox height="100%" width="228" minWidth="120" dividerSkin="net.vdombox.ide.common.view.skins.DividerSkin">
+	
+			<components:ContainersPanel id="containersPanel"
+										width="100%" height="40%" 
+										skinClass="net.vdombox.ide.modules.scripts.view.skins.PanelSkin"
+										title="{ resourceManager.getString( 'Scripts_General', 'containers_panel_title' ) }"/>
+	
+			<components:ServerScriptsPanel id="serverScriptsPanel"
+										   width="100%" height="40%"
+										   skinClass="net.vdombox.ide.modules.scripts.view.skins.PanelSkin"
+										   title="{ resourceManager.getString( 'Scripts_General', 'server_scripts_panel_title' ) }"/>
+	
+			<components:GlobalScriptsPanel id="globalScriptsPanel"
+									   width="100%" height="20%"
+									   skinClass="net.vdombox.ide.modules.scripts.view.skins.PanelSkin"
+									   title="{ resourceManager.getString( 'Scripts_General', 'global_scripts_panel_title' ) }"/>
+			
+		</mx1:VDividedBox>
+		
+	</mx1:HDividedBox>
+</s:Group>
