--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
@@ -15,6 +15,15 @@
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.common.view.components.VDOMImage;
+			
+			protected function scroller1_mouseWheelHandler(event:MouseEvent):void
+			{				
+				var scroller : Scroller = event.currentTarget as Scroller;
+				
+				if ( scroller && scroller.viewport.verticalScrollPosition <= 5 && event.delta > 0 )
+					scroller.viewport.verticalScrollPosition = 0;
+			}
+			
 		]]>
 	</fx:Script>
 	
@@ -54,7 +63,7 @@
 						skinClass="net.vdombox.ide.common.view.skins.PopupWindowTitleBarSkin"/>
 		</s:Group>	
 			
-		<s:Scroller width="100%" height="100%" horizontalScrollPolicy="off">
+		<s:Scroller width="100%" height="100%" horizontalScrollPolicy="off" mouseWheel="scroller1_mouseWheelHandler(event)">
 			<s:RichEditableText id="textAreaContainer" 
 								editable="true"
 								selectable="true"
