git-svn-id: http://svn.vdombox.ru/flextools/trunk@8801 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/net/vdombox/editors/skins/ScriptEditorSkin.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/editors/skins/ScriptEditorSkin.mxml
@@ -40,6 +40,7 @@
 				{
 					scriptAreaComponent.addEventListener( Event.SCROLL, scriptAreaComponent_scrollHandler, false, 0, true );
 					scriptAreaComponent.addEventListener( Event.CHANGE, scriptAreaComponent_changeHandler, false, 0, true );
+					scriptAreaComponent.addEventListener( KeyboardEvent.KEY_DOWN, scriptAreaComponent_keyDownHandler, false, 0, true );
 				}
 
 				if ( hsb )
@@ -84,6 +85,11 @@
 			}
 
 			private function scriptAreaComponent_changeHandler( event : Event ) : void
+			{
+				updateScrollBar();
+			}
+			
+			private function scriptAreaComponent_keyDownHandler( event : KeyboardEvent ) : void
 			{
 				updateScrollBar();
 			}
