--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/SourceCode.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/SourceCode.mxml
@@ -17,6 +17,9 @@
 				if ( event.ctrlKey && event.keyCode == Keyboard.F )
 				{
 					currentState = "find";
+					findBox.findText.setFocus();
+					findBox.findText.text = pythonScriptEditor.scriptAreaComponent.selectionText;
+					findBox.findText.selectAll();
 				}
 			}
 			
