--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/QuerySimpleBuildBoxItemRenderer.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/QuerySimpleBuildBoxItemRenderer.mxml
@@ -56,6 +56,7 @@
 				operators = new ArrayList();
 				
 				operators.addItem( "==" );
+				operators.addItem( "LIKE" );
 				operators.addItem( ">" );
 				operators.addItem( ">=" );
 				operators.addItem( "<" );
