git-svn-id: http://svn.vdombox.ru/flextools/trunk@8807 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/Events.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/Events.mxml
@@ -35,10 +35,10 @@
 			thumbSkin : ClassReference("net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMMXHScrollTrumbSkin");
 		}
 		
-		/*s|VScrollBar
+		s|VScrollBar
 		{	
 			skinClass: ClassReference("net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMScrollBarSkin.VDOMVScrollBarSkin");  
-		}*/
+		}
 		
 		s|HScrollBar
 		{	
