--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventsPanelSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventsPanelSkin.mxml
@@ -37,12 +37,6 @@
 				dispatchEvent( new EventsPanelEvent( EventsPanelEvent.CREATE_SERVER_ACTION_CLICK ) );
 			}
 			
-			protected function actionsList_creationCompleteHandler(event:FlexEvent):void
-			{
-				var list : List = event.target as List;
-				list.scroller.verticalScrollBar.setStyle( "skinClass", VDOMVScrollBarSkin );
-			}
-			
 		]]>
 	</fx:Script>
 	
@@ -100,8 +94,7 @@
 			
 		<s:List id="eventsList" verticalScrollPolicy="on"
 					height="100%" labelField="name" width="100%" contentBackgroundAlpha="0"
-					dragEnabled="true" itemRenderer="net.vdombox.ide.modules.events.view.components.EventItemRenderer"
-					creationComplete="actionsList_creationCompleteHandler(event)"/>
+					dragEnabled="true" itemRenderer="net.vdombox.ide.modules.events.view.components.EventItemRenderer"/>
 	</s:VGroup>
 		
 	<s:VGroup width="100%" height="100%" gap="0">
@@ -141,8 +134,7 @@
 
 		<s:List id="actionsList" verticalScrollPolicy="on"
 						height="100%" labelField="name" width="100%" contentBackgroundAlpha="0"
-						dragEnabled="true" itemRenderer="net.vdombox.ide.modules.events.view.components.ActionItemRenderer"
-						creationComplete="actionsList_creationCompleteHandler(event)"/>
+						dragEnabled="true" itemRenderer="net.vdombox.ide.modules.events.view.components.ActionItemRenderer"/>
 	</s:VGroup>
 
 		
