git-svn-id: http://svn.vdombox.ru/flextools/trunk@8815 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTable.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTable.mxml
@@ -7,7 +7,7 @@
 		 xmlns:components1="net.vdombox.ide.common.components.*" 
 		 xmlns:components2="net.vdombox.ide.common.view.components.*" 
 		 xmlns:button="net.vdombox.ide.common.view.components.button.*"
-		 removedFromStage="group1_removedFromStageHandler(event)" 
+		 remove="group1_removedFromStageHandler(event)" 
 		 creationComplete="group1_creationCompleteHandler(event)">
 	
 	<s:states>
