git-svn-id: http://svn.vdombox.ru/flextools/trunk@8822 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Preview/src/net/vdombox/ide/modules/preview/view/components/Toolset.mxml
+++ b/IDE/v.02/modules/Preview/src/net/vdombox/ide/modules/preview/view/components/Toolset.mxml
@@ -18,7 +18,7 @@
 		<s:HorizontalLayout />
 	</s:layout>
 
-	<button:ToolsetButton id="toolsetButton"
+	<button:ToolsetButton id="toolsetButton" color="0xFFFF00"
 							  height="100%" click="{toolsetButton.selected = false}"
 							  label="{resourceManager.getString( 'Preview_General', 'toolset_button_label' ) }"
 							  skinClass="net.vdombox.ide.common.view.skins.button.ToolsetButtonSkin" />
